@@ -80,6 +80,7 @@ following names for their contribution to the product.
 * Yuri Astrakhan
 
 == Patch Contributors ==
+* Aaron Ball
 * Agbad
 * Ahmad Sherif
 * Alejandro Mery
